--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,5 @@
 site_name: The MathLamp Language Specification
+site_url: https://the-mathlamp-project.github.io/
 theme: terminal
 markdown_extensions:
   - pymdownx.arithmatex:
