--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -13,7 +13,7 @@ extra_javascript:
 plugins:
   - mike:
       alias_type: symlink
-      redirect_template: null
+      redirect_template: docs/index.html
       deploy_prefix: ''
       canonical_version: latest
       version_selector: true
